# timetravel_rts

./: .gitignore  CMakeLists.txt  LICENSE  imgui.ini
imgui/: CMakeLists.txt
shaders/: ShaderBuffers.hlsl  VertexToPixel.hlsl
shaders/pixel/: Depth.hlsl  flat.hlsl
shaders/vertex/: SimpleTransform.hlsl
src/: Arcospheres.cpp  Arcospheres.h  CMakeLists.txt  COMObject.h  Gameworld.cpp  Gameworld.h  GraphicsFramework.cpp  GraphicsFramework.h  ImguiHelper.cpp  ImguiHelper.h  MatrixUtils.cpp  MatrixUtils.h  Model.cpp  Model.h  RenderCall.cpp  RenderCall.h  ShaderBuffer.cpp  ShaderBuffer.h  ShaderInputMapping.cpp  ShaderInputMapping.h  Shaders.cpp  Shaders.h  StructuredData.h  Timeline.cpp  Timeline.h  Vertex.cpp  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  main.cpp
